[package]
name = "edd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4"
clap = {version = "4.5", features = ["derive"]}
pest = "2.7"
pest_derive = "2.7"
collect_result = "0.1"

[profile.release]
strip = "debuginfo"
