[package]
name = "edd"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.5"
clap = {version = "4.5", features = ["derive"]}
pest = "2.8"
pest_derive = "2.8"
collect_result = "0.1"
tempfile = "3.20.0"

[profile.release]
strip = "debuginfo"
